--- a/Project01/platformio.ini
+++ b/Project01/platformio.ini
@@ -8,14 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:cute_esp]
 platform = espressif32
-board = esp32dev
+board = esp-wrover-kit
 framework = arduino
 
 ; --- Serial Upload ---
 upload_port = COM9             
 ; ganti sesuai port kamu
+upload_speed = 921600
+board_build.arduino.psram = enabled
 
 lib_deps =
     bblanchon/ArduinoJson @ ^7.0.0
