--- a/Project02/platformio.ini
+++ b/Project02/platformio.ini
@@ -21,10 +21,10 @@ board_build.arduino.psram = enabled
 
 lib_deps =
     bblanchon/ArduinoJson @ ^7.0.0
-    sbkila/ESP Async WebServer@^1.2.3
-    me-no-dev/AsyncTCP@^1.1.1
+    ; sbkila/ESP Async WebServer@^1.2.3
+    ; me-no-dev/AsyncTCP@^1.1.1
     https://github.com/johnrickman/LiquidCrystal_I2C
-    https://github.com/adafruit/MAX6675-library
+    ; https://github.com/adafruit/MAX6675-library
 
 lib_extra_dirs = ../shared
 
